--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB_URI = mongodb+srv://Admin:VoucherAdmin123@cluster0.bjcdolz.mongodb.net/?retryWrites=true&w=majority
+DB_URI = mongodb+srv://syazwanazmi:syazwan26@cluster0.xze4qvk.mongodb.net/test
